ajout musique et confetti

--- a/animalMemoryEasy.html
+++ b/animalMemoryEasy.html
@@ -64,12 +64,7 @@
         </section>
     </div>
 
- 
-
-
-
-
-
-<script src="main.js"></script> 
+    <script src="confetti.js"></script>
+    <script src="main.js"></script> 
 </body>
 </html>
