--- a/englishMemoryEasy.html
+++ b/englishMemoryEasy.html
@@ -9,7 +9,7 @@
 
 
 <body class="bodypage1">
-
+    <script>confetti.start()</script>
     <audio controls preload="metadata" loop>
         <source src="perfect-time.mp3" type="audio/mpeg">
         <source src="perfect-time.wav" type="audio/wav">
@@ -63,8 +63,6 @@
             <img class="tailleCarte" id="c20" src="imageDosCarte/DosCarte.jpg"> 
         </section>
     </div>
-
- 
 
 
 
