--- a/animalMemoryEasy.html
+++ b/animalMemoryEasy.html
@@ -65,6 +65,6 @@
     </div>
 
     <script src="confetti.js"></script>
-    <script src="main.js"></script> 
+    <script src="JSanimalEasy.js"></script> 
 </body>
 </html>
