jeu expert presque fini

--- a/animalMemoryEasy.html
+++ b/animalMemoryEasy.html
@@ -10,13 +10,6 @@
 
 <body class="bodypage">
 
-    <audio controls preload="metadata" loop>
-        <source src="perfect-time.mp3" type="audio/mpeg">
-        <source src="perfect-time.wav" type="audio/wav">
-        <source src="perfect-time.mp3" type="audio/ogg; codecs=vorbis">
-    </audio>
-
-
     <a href="index.html">
     <img class="logo" src="imageindex/logoHome.png">
     </a>
@@ -28,7 +21,7 @@
     <div class="niveau">
         <a class="a1" href="animalMemoryEasy.html">EASY</a>
         <a class="a1" href="animalMemoryMedium.html">MEDIUM</a>
-        <a class="a1" href="animalMemoryHard.html">HARD</a>
+        <a class="a1" href="animalMemoryHard.html">EXPERT</a>
     </div>
 
     </br></br></br></br>
