--- a/englishMemoryEasy.html
+++ b/englishMemoryEasy.html
@@ -8,14 +8,7 @@
 </head>
 
 
-<body class="bodypage1">
-    <script>confetti.start()</script>
-    <audio controls preload="metadata" loop>
-        <source src="perfect-time.mp3" type="audio/mpeg">
-        <source src="perfect-time.wav" type="audio/wav">
-        <source src="perfect-time.mp3" type="audio/ogg; codecs=vorbis">
-    </audio>
-
+<body class="bodypage">
 
     <a href="index.html">
     <img class="logo" src="imageindex/logoHome.png">
@@ -28,7 +21,7 @@
     <div class="niveau">
         <a class="a1" href="englishMemoryEasy.html">EASY</a>
         <a class="a1" href="englishMemoryMedium.html">MEDIUM</a>
-        <a class="a1" href="englishMemoryHard.html">HARD</a>
+        <a class="a1" href="englishMemoryHard.html">EXPERT</a>
     </div>
 
     </br></br></br></br>
@@ -64,10 +57,7 @@
         </section>
     </div>
 
-
-
-
-
-<script src="main.js"></script> 
+    <script src="confetti.js"></script>
+    <script src="JSenglishEasy.js"></script> 
 </body>
 </html>
