--- a/englishMemoryHard.html
+++ b/englishMemoryHard.html
@@ -28,7 +28,7 @@
     <div class="niveau">
         <a class="a1" href="englishMemoryEasy.html">EASY</a>
         <a class="a1" href="englishMemoryMedium.html">MEDIUM</a>
-        <a class="a1" href="englishMemoryHard.html">HARD</a>
+        <a class="a1" href="englishMemoryHard.html">EXPERT</a>
     </div>
 
     </br></br></br></br>
