--- a/animalMemoryHard.html
+++ b/animalMemoryHard.html
@@ -10,13 +10,6 @@
 
 <body class="bodypage">
 
-    <audio controls preload="metadata" loop>
-        <source src="perfect-time.mp3" type="audio/mpeg">
-        <source src="perfect-time.wav" type="audio/wav">
-        <source src="perfect-time.mp3" type="audio/ogg; codecs=vorbis">
-    </audio>
-
-
     <a href="index.html">
     <img class="logo" src="imageindex/logoHome.png">
     </a>
@@ -28,7 +21,7 @@
     <div class="niveau">
         <a class="a1" href="animalMemoryEasy.html">EASY</a>
         <a class="a1" href="animalMemoryMedium.html">MEDIUM</a>
-        <a class="a1" href="animalMemoryHard.html">HARD</a>
+        <a class="a1" href="animalMemoryHard.html">EXPERT</a>
     </div>
 
     </br></br></br></br>
@@ -69,7 +62,7 @@
             <img class="tailleCarte1" id="c26" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c27" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c28" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c28" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c29" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c30" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c31" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c32" src="imageDosCarte/DosCarte.jpg">
@@ -78,31 +71,21 @@
             <img class="tailleCarte1" id="c33" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c34" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c35" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c36" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c37" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c38" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c39" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c40" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c41" src="imageDosCarte/DosCarte.jpg">
         </section>
         <section>
+            <img class="tailleCarte1" id="c41" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c42" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c36" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c43" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c44" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c45" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c46" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c47" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c48" src="imageDosCarte/DosCarte.jpg">
-        </section>
-        <section>
-            <img class="tailleCarte1" id="c49" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c50" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c51" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c52" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c53" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c54" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c55" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c56" src="imageDosCarte/DosCarte.jpg">
         </section>
         <section>
             <img class="tailleCarte1" id="c49" src="imageDosCarte/DosCarte.jpg">
@@ -124,46 +107,7 @@
             <img class="tailleCarte1" id="c63" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c64" src="imageDosCarte/DosCarte.jpg">
         </section>
-        <section>
-            <img class="tailleCarte1" id="c65" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c66" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c67" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c68" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c69" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c70" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c71" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c72" src="imageDosCarte/DosCarte.jpg">
-        </section>
-        <section>
-            <img class="tailleCarte1" id="c73" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c74" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c75" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c76" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c77" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c78" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c79" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c80" src="imageDosCarte/DosCarte.jpg">
-        </section>
-        <section>
-            <img class="tailleCarte1" id="c81" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c82" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c83" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c84" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c85" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c86" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c87" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c88" src="imageDosCarte/DosCarte.jpg">
-        </section>
-        <section>
-            <img class="tailleCarte1" id="c89" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c90" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c91" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c92" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c93" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c94" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c95" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c96" src="imageDosCarte/DosCarte.jpg">
-        </section>
+        
 
     </div>
 
@@ -172,7 +116,7 @@
 
 
 
-
-<script src="main.js"></script> 
+    <script src="confetti.js"></script>
+<script src="JSanimalExpert.js"></script> 
 </body>
 </html>
