"jeu 6 nvx finis

--- a/englishMemoryHard.html
+++ b/englishMemoryHard.html
@@ -10,13 +10,6 @@
 
 <body class="bodypage">
 
-    <audio controls preload="metadata" loop>
-        <source src="perfect-time.mp3" type="audio/mpeg">
-        <source src="perfect-time.wav" type="audio/wav">
-        <source src="perfect-time.mp3" type="audio/ogg; codecs=vorbis">
-    </audio>
-
-
     <a href="index.html">
     <img class="logo" src="imageindex/logoHome.png">
     </a>
@@ -35,58 +28,58 @@
 
     <div class="marge1">
         <section>
-            <img class="tailleCarte2" id="c1" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c2" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c3" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c4" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c5" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c6" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c7" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c8" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c1" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c2" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c3" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c4" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c5" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c6" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c7" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c8" src="imageDosCarte/DosCarte.jpg">
         </section> 
         <section>
-            <img class="tailleCarte2" id="c9" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c10" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c11" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c12" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c13" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c14" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c15" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c16" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c9" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c10" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c11" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c12" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c13" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c14" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c15" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c16" src="imageDosCarte/DosCarte.jpg">
         </section>
         <section>
-            <img class="tailleCarte2" id="c17" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c18" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c19" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c20" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c21" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c22" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c23" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c24" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c17" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c18" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c19" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c20" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c21" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c22" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c23" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c24" src="imageDosCarte/DosCarte.jpg">
         </section>
         <section>
-            <img class="tailleCarte2" id="c25" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c26" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c27" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c28" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c28" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c30" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c31" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte2" id="c32" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c25" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c26" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c27" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c28" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c29" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c30" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c31" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c32" src="imageDosCarte/DosCarte.jpg">
         </section>
         <section>
             <img class="tailleCarte1" id="c33" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c34" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c35" src="imageDosCarte/DosCarte.jpg">
+            <img class="tailleCarte1" id="c36" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c37" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c38" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c39" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c40" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c41" src="imageDosCarte/DosCarte.jpg">
         </section>
         <section>
+            <img class="tailleCarte1" id="c41" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c42" src="imageDosCarte/DosCarte.jpg">
-            <img class="tailleCarte1" id="c36" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c43" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c44" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c45" src="imageDosCarte/DosCarte.jpg">
@@ -114,10 +107,7 @@
             <img class="tailleCarte1" id="c63" src="imageDosCarte/DosCarte.jpg">
             <img class="tailleCarte1" id="c64" src="imageDosCarte/DosCarte.jpg">
         </section>
-
-
-
-      
+        
 
     </div>
 
@@ -126,7 +116,7 @@
 
 
 
-
-<script src="main.js"></script> 
+    <script src="confetti.js"></script>
+<script src="JSenglishExpert.js"></script> 
 </body>
 </html>
