--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEMORY</title>
     <link rel = "stylesheet" type= "text/css" href = "main.css">
+    <link rel="icon" type="image/png" href="/favicone.ico"/>
 </head>
 
 
